# VortexServerRust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.bat  build.sh  config.example.json  rust-toolchain.toml
Vortex/: README.md
Vortex/crates/perspective/: Cargo.toml
Vortex/crates/perspective-client/: Cargo.toml
Vortex/crates/perspective-client/src/rust/: proto.rs
Vortex/crates/perspective-server/: Cargo.toml
Vortex/crates/perspective-server/cmake/modules/: FindProtoc.cmake
Vortex/crates/perspective-server/conan/profiles/: windows-x64-static
Vortex/crates/perspective-server/cpp/perspective/src/cpp/: view.cpp
Vortex/crates/perspective-server/src/: ffi.rs  local_session.rs  server.rs
Vortex/examples/axum-server/: Cargo.toml
crates/perspective/: Cargo.toml
crates/perspective-client/src/rust/: proto.rs
crates/perspective-server/: Cargo.toml  build.rs  conanfile.py
crates/perspective-server/conan/profiles/: linux-x64-static  macos-arm64-static  macos-x64-static  windows-x64-static
crates/perspective-server/cpp/perspective/: CMakeLists.txt
crates/perspective-server/cpp/perspective/src/cpp/: arrow_csv.cpp  arrow_loader.cpp  computed_function.cpp  server.cpp
examples/axum-server/src/: main.rs
src/: config.rs  logging.rs  main.rs  nats.rs  supervisor.rs  tables.rs  transform.rs
src/ingress/: mod.rs  nats.rs  solace.rs  websocket.rs
