[workspace]
resolver = "2"
members = [
    "crates/perspective",
    "crates/perspective-client",
    "crates/perspective-server",
    "examples/axum-server",
]

[profile.dev]
panic = "abort"
opt-level = "s"

[profile.release]
panic = "abort"
opt-level = "z"
codegen-units = 1
lto = true
strip = true

[patch.crates-io]
protobuf-src = { git = "https://github.com/carlocorradini/rust-protobuf-native.git", rev = "1aba500e469f8bdc384a0fe9e69c189fda72e059" }
perspective-client = { path = "crates/perspective-client" }
perspective-server = { path = "crates/perspective-server" }
perspective = { path = "crates/perspective" }
