[workspace]
resolver = "2"
members = [
    ".",
    "Vortex/crates/perspective",
    "Vortex/crates/perspective-client",
    "Vortex/crates/perspective-server",
    "Vortex/examples/axum-server",
]

[package]
name = "vortex-server"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "vortex-server"
path = "src/main.rs"

[dependencies]
perspective = { path = "Vortex/crates/perspective", features = ["axum-ws"] }
axum = { version = ">=0.8,<0.9", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dev]
panic = "abort"
opt-level = "s"

[profile.release]
panic = "abort"
opt-level = "z"
codegen-units = 1
lto = true
strip = true

[patch.crates-io]
protobuf-src = { git = "https://github.com/carlocorradini/rust-protobuf-native.git", rev = "1aba500e469f8bdc384a0fe9e69c189fda72e059" }
perspective-client = { path = "Vortex/crates/perspective-client" }
perspective-server = { path = "Vortex/crates/perspective-server" }
perspective = { path = "Vortex/crates/perspective" }
