[workspace]
resolver = "2"
members = [
    ".",
    "Vortex/crates/perspective",
    "Vortex/crates/perspective-client",
    "Vortex/crates/perspective-server",
    "Vortex/examples/axum-server",
]

[package]
name = "vortex-server"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "vortex-server"
path = "src/main.rs"

[dependencies]
# Perspective engine
perspective = { path = "Vortex/crates/perspective", features = ["axum-ws"] }

# Web server
axum = { version = ">=0.8,<0.9", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# CLI / config
clap = { version = "4", features = ["derive", "env"] }
figment = { version = "0.10", features = ["json", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging / observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "registry"] }
tracing-appender = "0.2"

# Errors
anyhow = "1"
thiserror = "1"

# NATS JetStream
async-nats = "0.38"
futures = "0.3"

[profile.dev]
panic = "abort"
opt-level = "s"

[profile.release]
panic = "abort"
opt-level = "z"
codegen-units = 1
lto = true
strip = true

[patch.crates-io]
protobuf-src = { git = "https://github.com/carlocorradini/rust-protobuf-native.git", rev = "1aba500e469f8bdc384a0fe9e69c189fda72e059" }
perspective-client = { path = "Vortex/crates/perspective-client" }
perspective-server = { path = "Vortex/crates/perspective-server" }
perspective = { path = "Vortex/crates/perspective" }
