[package]
name = "perspective-axum-example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
perspective = { path = "../../crates/perspective", features = ["axum-ws"] }
axum = { version = ">=0.8,<0.9", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
